--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,9 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=GrandLineX-Bundle-Postgresql
-
+sonar.projectKey=GrandlineX_bundle-postgresql
+sonar.organization=grandlinex
 # --- optional properties ---
 
-# defaults to project key
-sonar.projectName=GrandLineX-Bundle-Postgresql
+
 # defaults to 'not provided'
 #sonar.projectVersion=1.0
 # Path is relative to the sonar-project.properties file. Defaults to .
