--- a/.ncurc.json
+++ b/.ncurc.json
@@ -1,12 +1,4 @@
 {
   "upgrade": true,
-  "reject": [
-    "eslint",
-    "@typescript-eslint/parser",
-    "@typescript-eslint/eslint-plugin",
-    "@types/node",
-    "eslint-config-airbnb-typescript",
-    "eslint-plugin-react",
-    "eslint-config-prettier"
-  ]
+  "reject": []
 }
