--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
   "name": "@grandlinex/bundle-postgresql",
-  "version": "0.29.0",
+  "version": "0.30.0",
   "description": "",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "type": "module",
+  "exports": {
+    "import": "./dist/mjs/index.js",
+    "require": "./dist/cjs/index.js"
+  },
+  "types": "dist/cjs/index.d.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/mjs/index.js",
   "scripts": {
-    "buildprep": "tsc",
+    "buildprep": "npm run build-mjs && npm run build-cjs && npm run build-fix",
+    "build-mjs": "tsc -p tsconfig-mjs.json",
+    "build-cjs": "tsc",
+    "build-fix": "node ./node_modules/@grandlinex/core/fix.js",
     "lint": "eslint src",
     "test": "jest --runInBand ",
     "run": "ts-node tests/run.ts",
@@ -25,34 +34,34 @@
   },
   "license": "BSD-3-Clause",
   "dependencies": {
-    "@grandlinex/core": "^0.30.0",
-    "pg": "^8.7.3"
+    "@grandlinex/core": "0.30.0",
+    "pg": "^8.10.0",
+    "@types/pg": "^8.6.6"
   },
   "devDependencies": {
-    "@types/jest": "^27.4.1",
-    "@types/node": "^16.11.17",
-    "@types/pg": "^8.6.5",
-    "@typescript-eslint/eslint-plugin": "^5.5.0",
-    "@typescript-eslint/parser": "^5.5.0",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.3.0",
+    "eslint": "^8.37.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^16.1.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^26.1.1",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "jest": "^27.5.1",
-    "jest-junit": "^13.0.0",
-    "prettier": "^2.5.1",
-    "ts-jest": "^27.1.3",
-    "ts-loader": "^9.2.8",
-    "ts-node": "^10.7.0",
-    "typedoc": "^0.22.13",
-    "typescript": "^4.6.2"
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.5.0",
+    "jest-junit": "^15.0.0",
+    "prettier": "^2.8.7",
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
+    "typedoc": "^0.23.28",
+    "typescript": "^5.0.3"
   },
   "repository": {
     "type": "git",
