--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
   "name": "@grandlinex/bundle-postgresql",
-  "version": "0.30.1",
+  "version": "0.30.2",
   "description": "",
   "type": "module",
   "exports": {
-    "import": "./dist/mjs/index.js",
-    "require": "./dist/cjs/index.js"
+    ".": {
+      "import": {
+        "types": "./dist/mjs/index.d.ts",
+        "default": "./dist/mjs/index.js"
+      },
+      "require": {
+        "types": "./dist/cjs/index.d.ts",
+        "default": "./dist/cjs/index.js"
+      }
+    }
   },
   "types": "dist/cjs/index.d.ts",
   "main": "dist/cjs/index.js",
   "module": "dist/mjs/index.js",
   "scripts": {
     "buildprep": "npm run build-mjs && npm run build-cjs && npm run build-fix",
-    "build-mjs": "tsc -p tsconfig-mjs.json",
-    "build-cjs": "tsc",
+    "build-mjs": "tsc",
+    "build-cjs": "tsc -p tsconfig-cjs.json",
     "build-fix": "node ./node_modules/@grandlinex/core/fix.js",
     "lint": "eslint src",
     "test": "jest --runInBand ",
