--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@grandlinex/bundle-postgresql",
-  "version": "0.32.0",
+  "version": "0.32.1",
   "description": "",
   "type": "module",
   "exports": {
@@ -43,33 +43,33 @@
   "license": "BSD-3-Clause",
   "dependencies": {
     "@grandlinex/core": "0.32.0",
-    "pg": "^8.10.0",
-    "@types/pg": "^8.6.6"
+    "pg": "8.12.0",
+    "@types/pg": "8.11.6"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.0",
-    "@types/node": "^18.15.11",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.37.0",
+    "@types/jest": "29.5.12",
+    "@types/node": "20.14.5",
+    "@typescript-eslint/eslint-plugin": "7.13.1",
+    "@typescript-eslint/parser": "7.13.1",
+    "cross-env": "7.0.3",
+    "eslint": "8.57.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^29.5.0",
-    "jest-junit": "^15.0.0",
-    "prettier": "^2.8.7",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.2",
-    "ts-node": "^10.9.1",
-    "typedoc": "^0.23.28",
-    "typescript": "^5.0.3"
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^28.6.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "jest": "29.7.0",
+    "jest-junit": "16.0.0",
+    "prettier": "3.3.2",
+    "ts-jest": "29.1.5",
+    "ts-loader": "9.5.1",
+    "ts-node": "10.9.2",
+    "typedoc": "0.25.13",
+    "typescript": "5.4.5"
   },
   "repository": {
     "type": "git",
