--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@grandlinex/bundle-postgresql",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "type": "module",
   "exports": {
@@ -44,6 +44,7 @@
   "dependencies": {
     "@grandlinex/core": "1.0.1",
     "pg": "8.12.0",
+    "moment": "2.30.1",
     "@types/pg": "8.11.6"
   },
   "devDependencies": {
