--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@grandlinex/bundle-postgresql",
-  "version": "1.0.3",
+  "version": "1.1.0-alpha.0",
   "description": "",
   "type": "module",
   "exports": {
@@ -26,6 +26,7 @@
     "lint": "eslint src",
     "test": "jest --runInBand ",
     "run": "ts-node tests/run.ts",
+    "pack": "eslint && npm run buildprep && npm pack",
     "test-converage": "jest --runInBand --ci --collectCoverage   --coverageDirectory=\"./coverage\"  --reporters=default --reporters=jest-junit",
     "makeDocs": "typedoc"
   },
@@ -42,35 +43,32 @@
   },
   "license": "BSD-3-Clause",
   "dependencies": {
-    "@grandlinex/core": "1.0.1",
-    "pg": "8.12.0",
+    "@grandlinex/core": "1.1.0-alpha.0",
+    "pg": "8.16.3",
     "moment": "2.30.1",
-    "@types/pg": "8.11.6"
+    "@types/pg": "8.15.5"
   },
   "devDependencies": {
-    "@types/jest": "29.5.12",
-    "@types/node": "22.0.0",
+    "@types/jest": "29.5.14",
+    "@types/node": "22.15.20",
     "@typescript-eslint/eslint-plugin": "7.18.0",
     "@typescript-eslint/parser": "7.18.0",
-    "cross-env": "7.0.3",
-    "eslint": "8.57.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^18.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jest": "^28.6.0",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint": "8.57.1",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-typescript": "18.0.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jest": "28.6.0",
+    "eslint-plugin-jsx-a11y": "6.9.0",
+    "eslint-plugin-prettier": "5.2.1",
     "jest": "29.7.0",
     "jest-junit": "16.0.0",
-    "prettier": "3.3.3",
-    "ts-jest": "29.1.5",
-    "ts-loader": "9.5.1",
+    "prettier": "3.5.3",
+    "ts-jest": "29.3.4",
+    "ts-loader": "9.5.2",
     "ts-node": "10.9.2",
-    "typedoc": "0.26.5",
-    "typescript": "5.5.4"
+    "typedoc": "0.28.10",
+    "typescript": "5.9.2"
   },
   "repository": {
     "type": "git",
