--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@grandlinex/bundle-postgresql",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "description": "",
   "type": "module",
   "exports": {
@@ -43,10 +43,12 @@
   },
   "license": "BSD-3-Clause",
   "dependencies": {
-    "@grandlinex/core": "1.2.0",
     "pg": "8.16.3",
     "moment": "2.30.1",
-    "@types/pg": "8.15.6"
+    "@types/pg": "8.16.0"
+  },
+  "peerDependencies": {
+    "@grandlinex/core": ">=1.3.1"
   },
   "devDependencies": {
     "@types/jest": "29.5.14",
